Cancelling transforms in Graph Editor does not restore F-Curves to original state #39880

Closed
opened 2014-04-24 17:12:33 +02:00 by Joshua Leung · 5 comments
Member

Using the file in #39819:

  1. Change Autosnap mode to "Nearest Second"
  2. Try to grab the selected keyframe -> keyframe should end up snapping to the start of the FCurve
  3. Cancel the transform (esc or RMB)
  4. Selected keyframe does not return to start

I'm not sure yet where this bug is coming from. It didn't seem to exist in 2.69 (when drawing times as seconds instead of frames, to trigger frame snapping). More investigation needed.

Using the file in #39819: 1) Change Autosnap mode to "Nearest Second" 2) Try to grab the selected keyframe -> keyframe should end up snapping to the start of the FCurve 3) Cancel the transform (esc or RMB) 4) Selected keyframe does not return to start I'm not sure yet where this bug is coming from. It didn't seem to exist in 2.69 (when drawing times as seconds instead of frames, to trigger frame snapping). More investigation needed.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung self-assigned this 2014-04-24 17:12:33 +02:00

This issue was referenced by blender/blender-addons-contrib@3b75d6c4f9

This issue was referenced by blender/blender-addons-contrib@3b75d6c4f9a60258b40ead78533dfd219cfc85ce

This issue was referenced by 3b75d6c4f9

This issue was referenced by 3b75d6c4f9a60258b40ead78533dfd219cfc85ce
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Closed by commit 3b75d6c4f9.

Closed by commit 3b75d6c4f9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39880
No description provided.